testcases/error/invalid_logical_operand.veryl
module invalid_logical_operand {
    let _a: logic = 1 && 1;
}
